--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Mohammadreza Najafi
 logo: /assets/img/logo.jpg
-email: Najafi at chosun dot kr
+email: mohamadrezanj76@gmail.com
 blank_title: true
 favicon: true
 description: ""
